[build-system]
requires = ["setuptools>=68,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "sshvault"
version = "0.3.2"
description = "Secure desktop SSH connection manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paramiko>=3.4,<4",
  "keyring>=24,<26",
  "pyte>=0.8,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "types-paramiko>=3.4,<4",
]

[project.scripts]
sshvault = "sshvault:main"

[tool.setuptools]
package-dir = {"" = "sshvault"}
py-modules = ["sshvault", "sshvault_core", "sshvault_security"]

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["sshvault/**/*.py", "pyproject.toml"]
exclude = [
  ".agents", ".codex", ".claude", ".conda-pkgs", ".git", ".mypy_cache",
  ".pytest_cache", ".ruff_cache", ".venv", "build", "dist", "envs",
  "__pycache__", "ambertools25", "ambertools25_src", "vmd-2.0.1a1",
]

[tool.pytest.ini_options]
testpaths = ["sshvault/tests"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sshvault_core", "sshvault_security"]
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["sshvault"]
allow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["attr-defined", "misc"]
